fix variable list nav buttons layout issue

--- a/src/Components/Selector/Selector.css
+++ b/src/Components/Selector/Selector.css
@@ -1,5 +1,3 @@
-.selector {
-  display: block; }
+.selector { display: block; }
 
-.ingredients-list-wrapper {
-  display: block; }
+.ingredients-list-wrapper { display: block; }
